Fix: Actualizar Dockerfile para añadir OpenJFX (#137)
Se trae desde un origen distinto (Gluon) lo necesario para correr en JavaFX, para llegar a demostrar que simplemente docker no es compatible con JavaFX, aunque el pipeline automatizado con docker y docker compound es funcional